--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -11,7 +11,6 @@
     <child>
       <widget class="GtkVBox" id="vbox23">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <widget class="GtkNotebook" id="create-pages">
@@ -21,7 +20,6 @@
             <child>
               <widget class="GtkVBox" id="vbox22">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment45">
                     <property name="visible">True</property>
@@ -51,7 +49,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox1">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label148">
                         <property name="visible">True</property>
@@ -83,7 +80,7 @@
                               <widget class="GtkLabel" id="label164">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label">&lt;small&gt;&#x25CF;&lt;/small&gt;</property>
+                                <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
                                 <property name="use_markup">True</property>
                               </widget>
                               <packing>
@@ -97,7 +94,7 @@
                               <widget class="GtkLabel" id="label163">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label">&lt;small&gt;&#x25CF;&lt;/small&gt;</property>
+                                <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
                                 <property name="use_markup">True</property>
                               </widget>
                               <packing>
@@ -111,7 +108,7 @@
                               <widget class="GtkLabel" id="label162">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label">&lt;small&gt;&#x25CF;&lt;/small&gt;</property>
+                                <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
                                 <property name="use_markup">True</property>
                               </widget>
                               <packing>
@@ -125,7 +122,7 @@
                               <widget class="GtkLabel" id="label161">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label">&lt;small&gt;&#x25CF;&lt;/small&gt;</property>
+                                <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
                                 <property name="use_markup">True</property>
                               </widget>
                               <packing>
@@ -230,7 +227,6 @@
               <widget class="GtkVBox" id="vbox24">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment47">
                     <property name="visible">True</property>
@@ -260,7 +256,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox25">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label167">
                         <property name="visible">True</property>
@@ -390,7 +385,6 @@
               <widget class="GtkVBox" id="vbox26">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment49">
                     <property name="visible">True</property>
@@ -420,7 +414,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox27">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label176">
                         <property name="visible">True</property>
@@ -716,7 +709,6 @@
               <widget class="GtkVBox" id="vbox28">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment53">
                     <property name="visible">True</property>
@@ -746,7 +738,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox29">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label186">
                         <property name="visible">True</property>
@@ -949,7 +940,6 @@
               <widget class="GtkVBox" id="vbox32">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment69">
                     <property name="visible">True</property>
@@ -979,7 +969,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox33">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label205">
                         <property name="visible">True</property>
@@ -1180,7 +1169,6 @@
               <widget class="GtkVBox" id="vbox41">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment95">
                     <property name="visible">True</property>
