--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -11,7 +11,6 @@
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <widget class="GtkMenuBar" id="menubar1">
             <property name="visible">True</property>
@@ -122,7 +121,6 @@
               <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
                 <property name="border_width">6</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">3</property>
                 <child>
                   <widget class="GtkFrame" id="frame1">
@@ -463,7 +461,6 @@
               <widget class="GtkVBox" id="vbox7">
                 <property name="visible">True</property>
                 <property name="border_width">3</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkHPaned" id="hpaned2">
                     <property name="visible">True</property>
@@ -498,7 +495,6 @@
                         <child>
                           <widget class="GtkVBox" id="net-details">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">20</property>
                             <child>
                               <widget class="GtkFrame" id="frame3">
@@ -529,7 +525,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -555,7 +551,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -720,7 +716,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -733,7 +729,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -748,7 +744,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1024,7 +1020,6 @@
               <widget class="GtkVBox" id="vbox5">
                 <property name="visible">True</property>
                 <property name="border_width">3</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkHPaned" id="hpaned1">
                     <property name="visible">True</property>
@@ -1064,7 +1059,6 @@
                             <child>
                               <widget class="GtkVBox" id="pool-details">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">6</property>
                                 <child>
                                   <widget class="GtkTable" id="table5">
@@ -1146,7 +1140,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1248,7 +1242,6 @@
                                 <child>
                                   <widget class="GtkVBox" id="vbox6">
                                     <property name="visible">True</property>
-                                    <property name="orientation">vertical</property>
                                     <property name="spacing">3</property>
                                     <child>
                                       <widget class="GtkHBox" id="hbox12">
@@ -1536,7 +1529,6 @@
               <widget class="GtkVBox" id="vbox3">
                 <property name="visible">True</property>
                 <property name="border_width">3</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkHPaned" id="hpaned3">
                     <property name="visible">True</property>
@@ -1576,7 +1568,6 @@
                             <child>
                               <widget class="GtkVBox" id="interface-details">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">12</property>
                                 <child>
                                   <widget class="GtkTable" id="table2">
@@ -1904,7 +1895,6 @@
                                 <child>
                                   <widget class="GtkVBox" id="interface-child-box">
                                     <property name="visible">True</property>
-                                    <property name="orientation">vertical</property>
                                     <property name="spacing">3</property>
                                     <child>
                                       <widget class="GtkLabel" id="label20">
