--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -27,12 +27,12 @@
 </property>
     <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
 Hugh O. Brock &lt;hbrock@redhat.com&gt;
-M&#xE1;ir&#xED;n Duffy &lt;duffy@redhat.com&gt;
+Máirín Duffy &lt;duffy@redhat.com&gt;
 Jeremy Katz &lt;katzj@redhat.com&gt;
 Cole Robinson &lt;crobinso@redhat.com&gt;
 </property>
     <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
-    <property name="artists">M&#xE1;ir&#xED;n Duffy &lt;duffy@redhat.com&gt;
+    <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;
 Mike Langlie &lt;mlanglie@redhat.com&gt;
 Jeremy Perry &lt;jeperry@redhat.com&gt;
 </property>
@@ -40,7 +40,6 @@ Jeremy Perry &lt;jeperry@redhat.com&gt;
     <signal name="delete_event" handler="on_vmm_about_delete_event"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
-        <property name="orientation">vertical</property>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area1"/>
           <packing>
