--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -11,7 +11,6 @@
       <widget class="GtkVBox" id="vbox23">
         <property name="visible">True</property>
         <property name="border_width">12</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <widget class="GtkNotebook" id="create-pages">
@@ -25,7 +24,6 @@
             <child>
               <widget class="GtkVBox" id="vbox22">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment45">
                     <property name="visible">True</property>
@@ -55,7 +53,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox1">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label148">
                         <property name="visible">True</property>
@@ -173,7 +170,6 @@
               <widget class="GtkVBox" id="vbox34">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page1-title">
                     <property name="visible">True</property>
@@ -198,7 +194,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox35">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
                       <widget class="GtkLabel" id="label217">
@@ -224,12 +219,10 @@
                         <child>
                           <widget class="GtkVBox" id="vbox10">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">18</property>
                             <child>
                               <widget class="GtkVBox" id="config-storage-box">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">4</property>
                                 <child>
                                   <widget class="GtkHBox" id="hbox7">
@@ -270,7 +263,6 @@
                                     <child>
                                       <widget class="GtkVBox" id="vbox18">
                                         <property name="visible">True</property>
-                                        <property name="orientation">vertical</property>
                                         <property name="spacing">4</property>
                                         <child>
                                           <widget class="GtkHBox" id="hbox8">
@@ -280,7 +272,7 @@
                                               <widget class="GtkSpinButton" id="config-storage-size">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
-                                                <property name="invisible_char">&#x25CF;</property>
+                                                <property name="invisible_char">●</property>
                                                 <property name="width_chars">5</property>
                                                 <property name="xalign">1</property>
                                                 <property name="adjustment">0 0 1000000 0.10000000000000001 10 0</property>
@@ -418,7 +410,7 @@
                                         <property name="width_request">335</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -533,7 +525,6 @@
               <widget class="GtkVBox" id="vbox52">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page2-title">
                     <property name="visible">True</property>
@@ -558,7 +549,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox53">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label365">
                         <property name="visible">True</property>
@@ -638,7 +628,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">17</property>
-                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="invisible_char">●</property>
                                     <property name="text" translatable="yes">aa:bb:cc:dd:ee:ff</property>
                                     <accessibility>
                                       <atkproperty name="AtkObject::accessible-name" translatable="yes">MAC Address Field</atkproperty>
@@ -717,7 +707,6 @@
                             <child>
                               <widget class="GtkVBox" id="vbox11">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <child>
                                   <widget class="GtkHBox" id="hbox6">
                                     <property name="visible">True</property>
@@ -770,7 +759,7 @@
                                           <widget class="GtkEntry" id="net-bridge">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="invisible_char">&#x25CF;</property>
+                                            <property name="invisible_char">●</property>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
@@ -823,7 +812,6 @@
               <widget class="GtkVBox" id="vbox55">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page3-title">
                     <property name="visible">True</property>
@@ -848,7 +836,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox56">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label393">
                         <property name="visible">True</property>
@@ -995,7 +982,6 @@
               <widget class="GtkVBox" id="vbox57">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment154">
                     <property name="visible">True</property>
@@ -1026,7 +1012,6 @@
                   <widget class="GtkVBox" id="vbox58">
                     <property name="visible">True</property>
                     <property name="border_width">10</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label415">
                         <property name="visible">True</property>
@@ -1130,7 +1115,7 @@
                                   <widget class="GtkSpinButton" id="graphics-port">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="invisible_char">●</property>
                                     <property name="adjustment">5900 5900 5999 1 10 0</property>
                                     <property name="climb_rate">1</property>
                                     <property name="snap_to_ticks">True</property>
@@ -1173,7 +1158,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="visibility">False</property>
-                                <property name="invisible_char">&#x25CF;</property>
+                                <property name="invisible_char">●</property>
                               </widget>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1360,7 +1345,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="invisible_char">●</property>
                                   </widget>
                                   <packing>
                                     <property name="left_attach">3</property>
@@ -1436,7 +1421,6 @@
               <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page5-title">
                     <property name="visible">True</property>
@@ -1461,7 +1445,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox3">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label8">
                         <property name="visible">True</property>
@@ -1545,7 +1528,6 @@
               <widget class="GtkVBox" id="vbox4">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page6-title">
                     <property name="visible">True</property>
@@ -1570,7 +1552,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox5">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label17">
                         <property name="visible">True</property>
@@ -1680,7 +1661,6 @@ to connect to the virtual machine.</property>
               <widget class="GtkVBox" id="vbox6">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
                   <widget class="GtkEventBox" id="page7-title">
@@ -1715,7 +1695,6 @@ to connect to the virtual machine.</property>
                         <child>
                           <widget class="GtkVBox" id="vbox7">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">12</property>
                             <child>
                               <widget class="GtkFrame" id="frame7">
@@ -2075,7 +2054,6 @@ to connect to the virtual machine.</property>
               <widget class="GtkVBox" id="vbox8">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page8-title">
                     <property name="visible">True</property>
@@ -2100,7 +2078,6 @@ to connect to the virtual machine.</property>
                 <child>
                   <widget class="GtkVBox" id="vbox9">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label21">
                         <property name="visible">True</property>
@@ -2184,7 +2161,6 @@ to connect to the virtual machine.</property>
               <widget class="GtkVBox" id="vbox12">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkEventBox" id="page9-title">
                     <property name="visible">True</property>
@@ -2209,7 +2185,6 @@ to connect to the virtual machine.</property>
                 <child>
                   <widget class="GtkVBox" id="vbox13">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <widget class="GtkLabel" id="label24">
                         <property name="visible">True</property>
@@ -2319,7 +2294,6 @@ and default action should be used.</property>
               <widget class="GtkVBox" id="vbox41">
                 <property name="visible">True</property>
                 <property name="border_width">1</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">18</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment95">
