--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.16 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -9,7 +9,6 @@
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <widget class="GtkViewport" id="create-header">
             <property name="visible">True</property>
@@ -37,7 +36,6 @@
                     <child>
                       <widget class="GtkVBox" id="vbox3">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <child>
                           <widget class="GtkLabel" id="label2">
                             <property name="visible">True</property>
@@ -83,7 +81,6 @@
           <widget class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
             <property name="border_width">12</property>
-            <property name="orientation">vertical</property>
             <property name="spacing">15</property>
             <child>
               <widget class="GtkAlignment" id="alignment1">
@@ -99,12 +96,10 @@
                     <child>
                       <widget class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">40</property>
                         <child>
                           <widget class="GtkVBox" id="vbox5">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">6</property>
                             <child>
                               <widget class="GtkLabel" id="label10">
@@ -254,7 +249,6 @@
                         <child>
                           <widget class="GtkVBox" id="install-box">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">8</property>
                             <child>
                               <widget class="GtkLabel" id="label12">
@@ -274,7 +268,6 @@
                                 <child>
                                   <widget class="GtkVBox" id="vbox19">
                                     <property name="visible">True</property>
-                                    <property name="orientation">vertical</property>
                                     <property name="spacing">3</property>
                                     <child>
                                       <widget class="GtkRadioButton" id="method-local">
@@ -364,7 +357,6 @@
                     <child>
                       <widget class="GtkVBox" id="vbox7">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">10</property>
                         <child>
                           <widget class="GtkNotebook" id="install-method-pages">
@@ -378,7 +370,6 @@
                                 <child>
                                   <widget class="GtkVBox" id="vbox9">
                                     <property name="visible">True</property>
-                                    <property name="orientation">vertical</property>
                                     <property name="spacing">6</property>
                                     <child>
                                       <widget class="GtkLabel" id="label21">
@@ -398,12 +389,10 @@
                                         <child>
                                           <widget class="GtkVBox" id="vbox13">
                                             <property name="visible">True</property>
-                                            <property name="orientation">vertical</property>
                                             <property name="spacing">4</property>
                                             <child>
                                               <widget class="GtkVBox" id="vbox123">
                                                 <property name="visible">True</property>
-                                                <property name="orientation">vertical</property>
                                                 <property name="spacing">4</property>
                                                 <child>
                                                   <widget class="GtkRadioButton" id="install-local-cdrom">
@@ -547,7 +536,6 @@
                             <child>
                               <widget class="GtkVBox" id="vbox10">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">6</property>
                                 <child>
                                   <widget class="GtkLabel" id="label23">
@@ -644,7 +632,7 @@
                                                           <widget class="GtkEntry" id="install-urlopts-entry">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
-                                                            <property name="invisible_char">&#x2022;</property>
+                                                            <property name="invisible_char">•</property>
                                                           </widget>
                                                           <packing>
                                                             <property name="left_attach">1</property>
@@ -741,7 +729,6 @@ User shouldn't see this.</property>
                             <child>
                               <widget class="GtkVBox" id="vbox20">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">6</property>
                                 <child>
                                   <widget class="GtkLabel" id="label41">
@@ -775,7 +762,7 @@ User shouldn't see this.</property>
                                           <widget class="GtkEntry" id="install-import-entry">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="invisible_char">&#x25CF;</property>
+                                            <property name="invisible_char">●</property>
                                           </widget>
                                           <packing>
                                             <property name="position">1</property>
@@ -829,12 +816,10 @@ User shouldn't see this.</property>
                         <child>
                           <widget class="GtkVBox" id="vbox8">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">6</property>
                             <child>
                               <widget class="GtkVBox" id="install-detect-os-box">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <signal name="hide" handler="on_install_detect_os_box_hide"/>
                                 <signal name="show" handler="on_install_detect_os_box_show"/>
                                 <child>
@@ -991,13 +976,11 @@ User shouldn't see this.</property>
                     <child>
                       <widget class="GtkVBox" id="vbox11">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">40</property>
                         <child>
                           <widget class="GtkVBox" id="vbox12">
                             <property name="visible">True</property>
                             <property name="extension_events">cursor</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">6</property>
                             <child>
                               <widget class="GtkLabel" id="label15">
@@ -1196,7 +1179,6 @@ User shouldn't see this.</property>
                     <child>
                       <widget class="GtkVBox" id="config-storage-area">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
                         <child>
                           <widget class="GtkCheckButton" id="enable-storage">
@@ -1221,7 +1203,6 @@ User shouldn't see this.</property>
                             <child>
                               <widget class="GtkVBox" id="config-storage-box">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <property name="spacing">4</property>
                                 <child>
                                   <widget class="GtkHBox" id="hbox6">
@@ -1262,7 +1243,6 @@ User shouldn't see this.</property>
                                     <child>
                                       <widget class="GtkVBox" id="vbox18">
                                         <property name="visible">True</property>
-                                        <property name="orientation">vertical</property>
                                         <property name="spacing">4</property>
                                         <child>
                                           <widget class="GtkHBox" id="hbox7">
@@ -1446,12 +1426,10 @@ User shouldn't see this.</property>
                     <child>
                       <widget class="GtkVBox" id="vbox15">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">30</property>
                         <child>
                           <widget class="GtkVBox" id="vbox16">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">6</property>
                             <child>
                               <widget class="GtkLabel" id="summary-title">
@@ -1673,17 +1651,14 @@ User shouldn't see this.</property>
                                 <child>
                                   <widget class="GtkVBox" id="vbox14">
                                     <property name="visible">True</property>
-                                    <property name="orientation">vertical</property>
                                     <property name="spacing">6</property>
                                     <child>
                                       <widget class="GtkVBox" id="vbox17">
                                         <property name="visible">True</property>
-                                        <property name="orientation">vertical</property>
                                         <property name="spacing">6</property>
                                         <child>
                                           <widget class="GtkVBox" id="vbox6">
                                             <property name="visible">True</property>
-                                            <property name="orientation">vertical</property>
                                             <child>
                                               <widget class="GtkHBox" id="hbox8">
                                                 <property name="visible">True</property>
@@ -1740,7 +1715,7 @@ User shouldn't see this.</property>
                                                       <widget class="GtkEntry" id="config-netdev-bridge">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
-                                                        <property name="invisible_char">&#x25CF;</property>
+                                                        <property name="invisible_char">●</property>
                                                       </widget>
                                                       <packing>
                                                         <property name="expand">False</property>
