--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
@@ -11,7 +11,6 @@
     <child>
       <widget class="GtkVBox" id="vbox2">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <widget class="GtkMenuBar" id="details-menubar">
             <property name="visible">True</property>
@@ -893,7 +892,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox53">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
                       <widget class="GtkScrolledWindow" id="scrolledwindow5">
@@ -939,7 +937,6 @@
                 <child>
                   <widget class="GtkVBox" id="vbox1">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
                       <widget class="GtkNotebook" id="hw-panel">
@@ -953,7 +950,6 @@
                           <widget class="GtkVBox" id="vbox6">
                             <property name="visible">True</property>
                             <property name="border_width">3</property>
-                            <property name="orientation">vertical</property>
                             <property name="spacing">12</property>
                             <child>
                               <widget class="GtkAlignment" id="alignment3">
@@ -1487,7 +1483,7 @@
                                                   <widget class="GtkEntry" id="security-label">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
-                                                    <property name="invisible_char">&#x25CF;</property>
+                                                    <property name="invisible_char">●</property>
                                                     <signal name="changed" handler="on_security_label_changed"/>
                                                   </widget>
                                                   <packing>
@@ -1632,7 +1628,6 @@
                         <child>
                           <widget class="GtkVBox" id="vbox5">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame3">
                                 <property name="visible">True</property>
@@ -1824,7 +1819,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox14">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="CPUs">
                                 <property name="visible">True</property>
@@ -1952,7 +1946,7 @@ I/O:</property>
                                                   <widget class="GtkSpinButton" id="config-vcpus">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
-                                                    <property name="invisible_char">&#x25CF;</property>
+                                                    <property name="invisible_char">●</property>
                                                     <property name="adjustment">2 1 32 1 2 0</property>
                                                     <property name="climb_rate">1</property>
                                                     <property name="numeric">True</property>
@@ -2061,7 +2055,6 @@ I/O:</property>
                                     <child>
                                       <widget class="GtkVBox" id="vbox10">
                                         <property name="visible">True</property>
-                                        <property name="orientation">vertical</property>
                                         <property name="spacing">12</property>
                                         <child>
                                           <widget class="GtkTable" id="table9">
@@ -2103,7 +2096,7 @@ I/O:</property>
                                                   <widget class="GtkEntry" id="config-vcpupin">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
-                                                    <property name="invisible_char">&#x25CF;</property>
+                                                    <property name="invisible_char">●</property>
                                                     <accessibility>
                                                       <atkproperty name="AtkObject::accessible-name" translatable="yes">Virtual CPU Affinity Select</atkproperty>
                                                     </accessibility>
@@ -2183,7 +2176,6 @@ I/O:</property>
                                         <child>
                                           <widget class="GtkVBox" id="vbox11">
                                             <property name="visible">True</property>
-                                            <property name="orientation">vertical</property>
                                             <property name="spacing">6</property>
                                             <child>
                                               <widget class="GtkLabel" id="label29">
@@ -2259,7 +2251,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox7">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame5">
                                 <property name="visible">True</property>
@@ -2370,7 +2361,7 @@ I/O:</property>
                                               <widget class="GtkSpinButton" id="config-memory">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
-                                                <property name="invisible_char">&#x25CF;</property>
+                                                <property name="invisible_char">●</property>
                                                 <property name="adjustment">50 50 32000 1 25 0</property>
                                                 <property name="climb_rate">2</property>
                                                 <property name="numeric">True</property>
@@ -2413,7 +2404,7 @@ I/O:</property>
                                               <widget class="GtkSpinButton" id="config-maxmem">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
-                                                <property name="invisible_char">&#x25CF;</property>
+                                                <property name="invisible_char">●</property>
                                                 <property name="adjustment">50 50 32000 1 25 0</property>
                                                 <property name="climb_rate">2</property>
                                                 <property name="numeric">True</property>
@@ -2487,11 +2478,9 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox3">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkVBox" id="vbox4">
                                 <property name="visible">True</property>
-                                <property name="orientation">vertical</property>
                                 <child>
                                   <widget class="GtkFrame" id="frame4">
                                     <property name="visible">True</property>
@@ -2692,7 +2681,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox55">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame10">
                                 <property name="visible">True</property>
@@ -3032,7 +3020,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox54">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame9">
                                 <property name="visible">True</property>
@@ -3195,7 +3182,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox56">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame11">
                                 <property name="visible">True</property>
@@ -3355,7 +3341,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox57">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame12">
                                 <property name="visible">True</property>
@@ -3555,7 +3540,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox58">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame13">
                                 <property name="visible">True</property>
@@ -3657,7 +3641,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox59">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame14">
                                 <property name="visible">True</property>
@@ -3769,7 +3752,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox8">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame6">
                                 <property name="visible">True</property>
@@ -3850,7 +3832,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox9">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame8">
                                 <property name="visible">True</property>
@@ -4009,7 +3990,6 @@ I/O:</property>
                         <child>
                           <widget class="GtkVBox" id="vbox12">
                             <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkFrame" id="frame15">
                                 <property name="visible">True</property>
