--- a/src/vmm-migrate.glade
+++ b/src/vmm-migrate.glade
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
   <!-- interface-requires gtk+ 2.16 -->
   <!-- interface-naming-policy project-wide -->
@@ -11,7 +11,6 @@
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <widget class="GtkViewport" id="migrate-header">
@@ -58,12 +57,10 @@
           <widget class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
             <property name="border_width">12</property>
-            <property name="orientation">vertical</property>
             <property name="spacing">18</property>
             <child>
               <widget class="GtkVBox" id="vbox3">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">18</property>
                 <child>
                   <widget class="GtkTable" id="table2">
@@ -208,7 +205,6 @@
                     <child>
                       <widget class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
                         <child>
                           <widget class="GtkAlignment" id="alignment2">
@@ -278,7 +274,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="sensitive">False</property>
                                                 <property name="can_focus">True</property>
-                                                <property name="invisible_char">&#x2022;</property>
+                                                <property name="invisible_char">•</property>
                                                 <property name="adjustment">0 0 10000 1 10 0</property>
                                               </widget>
                                               <packing>
@@ -414,7 +410,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x2022;</property>
+                                        <property name="invisible_char">•</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">2</property>
@@ -430,7 +426,7 @@
                                             <property name="visible">True</property>
                                             <property name="sensitive">False</property>
                                             <property name="can_focus">True</property>
-                                            <property name="invisible_char">&#x2022;</property>
+                                            <property name="invisible_char">•</property>
                                             <property name="adjustment">0 0 70000 1 10 0</property>
                                           </widget>
                                           <packing>
